# malgo

./: .envrc  .gitattributes  .gitignore  .gitmessage  .golangci.yaml  .golangci.yml  .hindent.yaml  .hlint.yaml  .ignore  .mcp.json  .merlin  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.markdown  README.md  README.org  Setup.hs  TODO.md  brittany.yaml  build.json  cabal.project  cabal.project.freeze  check.sh  dependencies.dot  design.md  devenv.nix  flake.nix  fourmolu.yaml  gen_examples.sh  go.mod  go.sum  graph.py  graph.sh  hie.yaml  (+26 more)
.chglog/: config.yml
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh  post-create.sh  postCreateCommand.sh
.github/: copilot-instructions.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/chatmodes/: UpdateDoc.chatmode.md  planning.chatmode.md
.github/disabled-workflows/: nix.yml  update-flake-lock.yml
.github/prompts/: auto_impl_small_issue.prompt.md  execute.prompt.md  find-issues.prompt.md  fix-issue.prompt.md  fix_issue.md  issue.prompt.md  plan.prompt.md  pull_request_review_fix.prompt.md  run-test.prompt.md  tdd.prompt.md
.github/workflows/: build.yml  changelog.yml  go.yml  kagami_ci.yml  malgo_ci.yml  nix.yml  release-please.yml  test.yml  update-flake-lock.yml  upload-sbom.yml
.golden/Malgo.Core-parse-core-DataDef/: actual
.golden/Malgo.Core-parse-core-DeferLaw/: golden
.golden/Malgo.Core-parse-core-Double/: golden
.golden/Malgo.Core-parse-core-Echo/: golden
.golden/Malgo.Core-parse-core-EvenOdd/: actual
.golden/Malgo.Core-parse-core-Factorial/: golden
.golden/Malgo.Core-parse-core-FuncOverUnboxed/: actual
.golden/Malgo.Core-parse-core-HelloBoxed/: golden
.golden/Malgo.Core-parse-core-HelloImport/: golden
.golden/Malgo.Core-parse-core-InlineFunction/: golden
.golden/Malgo.Core-parse-core-NestedMatch/: actual
.golden/Malgo.Core-parse-core-Null/: actual
.golden/Malgo.Core-parse-core-Pattern/: golden
.golden/Malgo.Core-parse-core-Primitive/: golden
.golden/Malgo.Core-parse-core-Punctuate/: golden
.golden/Malgo.Core-parse-core-RightAssoc/: golden
.golden/Malgo.Core-parse-core-Seq/: golden
app/: Main.hs
ast/: ast.go
bench/: NQueen.mlg
benchmarks/: Fib.mlg  Main.hs  Tarai.mlg
codata/: flat.go  flat_test.go
compiler/: malgo.cabal  package.yaml
core/: conv.go  conv_test.go  core.go  focus.go  focus_test.go  merge_patterns.go  unique.go
design/: design.md  hello.mlg  malgo.ebnf  malgo_sema.txt  primitives.txt  sketch.mlg
desugarCurry/: curry.go  curry_test.go
desugarcurry/: curry.go  curry_test.go
desugarwith/: with.go  with_test.go
docs/: ARCHITECTURE.md  architecture.md  c-style.md  copatterns.md  griff.md  learnmalgo.mlg  malgo.md  new-syntax.md  reference.md  syntax.ebnf  syntax.md  tour.md  tutorial.md
driver/: run.go
eval/: errors.go  eval.go  eval_test.go  evaluator.go  prim.go  value.go
example/: hello.mlg
examples/: array.mlg  array_literal.mlg  cls.mlg  corelib.c  curry.mlg  error_op.mlg  even_odd.mlg  fib.mlg  fib_acc.mlg  fizzbuzz.mlg  hello.mlg  hello_s.mlg  id.mlg  lambda.mlg  lib.c  life.mlg  map.mlg  match.mlg  mult.ir  mult.mlg  mult0.ir  mult0.mlg  mutrec_tuple.mlg  poly_sig.mlg  polyfun.mlg  polyfun1.mlg  polyfun2.mlg  polyfun3.mlg  polyfun4.mlg  polyfun_tuple_array_succ.mlg  polytuple.mlg  queens.mlg  repeat.ir  repeat.mlg  sample.mlg  test.mlg  test1.mlg  test10.mlg  test11.mlg  test12.mlg  (+14 more)
go/: .golangci.yaml  go.mod  go.sum
griff/: Cargo.toml  griff.cabal  package.yaml
haskell/: .hlint.yaml  CHANGELOG.md  LICENSE  cabal.project  hie.yaml  malgo.cabal  package.yaml  stack.yaml
infix/: infix.go  infix_test.go
kakko-app/: Main.hs
koriel/: Cargo.toml  koriel.cabal  package.yaml
lexer/: lexer.go  lexer_test.go
malgo/: malgo.cabal  package.yaml
malgo-compiler/: build.dhall
nameresolve/: resolve.go  resolve_test.go
nix/: haskell-overrides.nix  upload-cachix.sh
ocaml/: .merlin  Makefile  _tags
old/: README.markdown  malgo.asd
old-examples/: cls.mlg  curry.mlg  test.mlg  test10.mlg  test11.mlg  test12.mlg  test5.mlg  test9.mlg
parser/: parser.go  parser_test.go
pretty/: pretty.go
roswell/: malgo.ros
scanner/: scanner.go  scanner_test.go
scripts/: README.md  bench.sh  build.sh  changelog.sh  compile.sh  generate_runtime.hs  install_malgo_internal.sh  pretest.sh  test.sh  test_malgo.sh  test_malgo_error.sh  test_malgo_only_compile.sh  test_malgo_parallel.sh  watch_and_build.sh
src/: Emit.hs  Malgo.hs  Parser.hs  Symbol.hs  Syntax.hs  eval.rs  lambda.lisp  lexer.lisp  lib.rs  main.rs  malgo.lisp  parsec.lisp  parser.lisp  parser.rs  printer.lisp  tests.rs  types.lisp
src_old/: ast.lisp
t/: malgo.lisp
templates/: Builtin.mlg.mustache  runtime.c.mustache  types.json
test/: .dir-locals.el  Spec.hs  SpecHook.hs  plan.md
testcases/: and_or.mlg  apply.mlg  cond.mlg  fib.mlg  hello.mlg  hello_cont.mlg  id.mlg  lambda.mlg  let_decls.mlg  match.mlg  mut.mlg  poly_sig.mlg  polyfun.mlg  polyfun2.mlg  polyfun3.mlg  print_bool.mlg  test0.mlg  test10.mlg  test12.mlg  test14.mlg  test7.mlg  test8.mlg  tuple.mlg
testdata/: block.mlg  bool_observe.mlg  cpsio.mlg  cpsio_direct.mlg  curry.mlg  exiotic_bool.mlg  fact.mlg  fib.mlg  fib_shift.mlg  infix.mlg  infix2.mlg  infix3.mlg  method-copattern.mlg  method.mlg  option.mlg  redundant.mlg  symbol.mlg  tarai.mlg  tree.mlg  tuple.mlg  twice.mlg  vendor.mlg  with.mlg
token/: kind_string.go  token.go
tools/: main.go
utils/: sexp.go  utils.go
v0.2/: CHANGELOG.md  LICENSE  README.md  cabal.project  hie.yaml  malgo.cabal  package.yaml
v2/: .gitignore  ChangeLog.md  package.yaml
ver2_sketch/: fib.mlg  fn.mlg
vm/: README.markdown  command.go  compile.go  compile_test.go  pattern.go  primitive.go  trace.go  value.go  vm-test.asd  vm.asd  vm.go  vm_test.go
wiki/: 2025-09-04-empty-arguments.md  2025-09-06-empty-arguments.md  2025-11-15-haskell-memory-profiling-guide.md  2025-11-15-malgo-profiling-mlgi-optimization.md
(+5366 files in other folders)
