cabal-version: 1.12

name:           malgo
version:        1.0.0.0
category:       Compilers/Interpreters
homepage:       https://github.com/takoeight0821/malgo#readme
bug-reports:    https://github.com/takoeight0821/malgo/issues
author:         Yuya Kono
maintainer:     takohati0821@gmail.com
copyright:      2017-2019 Yuya Kono
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/takoeight0821/malgo

library
  exposed-modules:
      Language.Malgo.BackEnd.LLVM
      Language.Malgo.Driver
      Language.Malgo.FrontEnd.Info
      Language.Malgo.FrontEnd.Rename
      Language.Malgo.FrontEnd.Typing.Constraint
      Language.Malgo.FrontEnd.Typing.Infer
      Language.Malgo.FrontEnd.Typing.Subst
      Language.Malgo.ID
      Language.Malgo.IR.HIR
      Language.Malgo.IR.LIR
      Language.Malgo.IR.Syntax
      Language.Malgo.Lexer
      Language.Malgo.MiddleEnd.Closure
      Language.Malgo.MiddleEnd.FreeVars
      Language.Malgo.MiddleEnd.HIRLint
      Language.Malgo.MiddleEnd.LIRLint
      Language.Malgo.MiddleEnd.TransToHIR
      Language.Malgo.Monad
      Language.Malgo.Parser
      Language.Malgo.Pass
      Language.Malgo.Pretty
      Language.Malgo.TypeRep.Type
  other-modules:
      Paths_malgo
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
  build-tools:
      happy
  build-depends:
      array
    , base >=4.7 && <5
    , bytestring
    , containers
    , flow
    , lens
    , llvm-hs-pure ==9.0.*
    , mtl
    , optparse-applicative
    , parsec
    , pretty
    , pretty-show
    , relude
    , text
    , transformers
    -- for flycheck-haskell
    , hspec
  default-language: Haskell2010

executable malgo
  main-is: Main.hs
  other-modules:
      Paths_malgo
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base
    , containers
    , llvm-hs ==9.0.*
    , llvm-hs-pure ==9.0.*
    , malgo
    , mtl
    , pretty-show
    , parsec
    , relude
    , text
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_malgo
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base
    , hspec
    , malgo
    , mtl
    , parsec
  default-language: Haskell2010
