cabal-version: 1.12

name:           malgo
version:        1.0.0.0
category:       Compilers/Interpreters
homepage:       https://github.com/takoeight0821/malgo#readme
bug-reports:    https://github.com/takoeight0821/malgo/issues
author:         Yuya Kono
maintainer:     takohati0821@gmail.com
copyright:      2017-2019 Yuya Kono
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/takoeight0821/malgo

library
  exposed-modules:
      Language.Malgo.BackEnd.GenLIR
      Language.Malgo.BackEnd.GenLLVM
      Language.Malgo.BackEnd.LIRBuilder
      Language.Malgo.Driver
      Language.Malgo.FrontEnd.Info
      Language.Malgo.FrontEnd.Rename
      Language.Malgo.FrontEnd.Typing.Constraint
      Language.Malgo.FrontEnd.Typing.Infer
      Language.Malgo.FrontEnd.Typing.Subst
      Language.Malgo.ID
      Language.Malgo.IR.HIR
      Language.Malgo.IR.MIR
      Language.Malgo.IR.LIR
      Language.Malgo.IR.Op
      Language.Malgo.IR.Syntax
      Language.Malgo.Lexer
      Language.Malgo.Token
      Language.Malgo.MiddleEnd.HIRLint
      Language.Malgo.MiddleEnd.MIRLint
      Language.Malgo.MiddleEnd.TransToHIR
      Language.Malgo.MiddleEnd.TransToMIR
      Language.Malgo.Monad
      Language.Malgo.Parser
      Language.Malgo.Pass
      Language.Malgo.Prelude
      Language.Malgo.Pretty
      Language.Malgo.TypeRep.Type
      Language.Malgo.TypeRep.LType
      Language.Malgo.TypeRep.SType
  other-modules:
      Paths_malgo
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-deriving-strategies
  default-extensions: StrictData
  build-tools:
      happy
  build-depends:
      array
    , base
    , containers
    , co-log
    , lens
    , llvm-hs-pure
    , mtl
    , optparse-applicative
    , parsec
    , pretty
    , pretty-simple
    , relude
    , text
    , transformers
  default-language: Haskell2010

executable malgo
  main-is: Main.hs
  other-modules:
      Paths_malgo
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
  build-depends:
      base
    , llvm-hs-pretty
    , malgo
    , relude
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_malgo
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
  build-depends:
      base
    , hspec
  default-language: Haskell2010
